--- a/Rapidlaunch/Views/Countries/Details.cshtml
+++ b/Rapidlaunch/Views/Countries/Details.cshtml
@@ -4,21 +4,22 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details</h1> <!-- heading -->
 
 <div>
-    <h4>Country</h4>
+    <h4>Country</h4> <!-- heading -->
     <hr />
-     <dl class="row" style="text-align:center"> <!--Align more Central  -->
-        <dt class = "col-sm-2">
+    <dl class="row" style="text-align:center">
+        <!--Align more Central  -->
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.countryName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.countryName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CountryID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.CountryID">Edit</a>  <!-- option to edit using the actions -->|
     <a asp-action="Index">Back to List</a>
 </div>
