--- a/Rapidlaunch/Views/Home/Privacy.cshtml
+++ b/Rapidlaunch/Views/Home/Privacy.cshtml
@@ -2,34 +2,34 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
-<div class="jumbotron text-center">
-    <h1>Privacy</h1>
+<div class="jumbotron text-center"> <!-- body layout -->
+    <h1>Privacy</h1> <!--header -->
 </div>
 
-<div class="GDPR">
+<div class="GDPR"> 
     <div class="row">
         <div class="col-sm-4">
-            <h3>GDPR</h3>
+            <h3>GDPR</h3><!-- header at teh top of each section-->
             <div class="text-center">
                 <p>General provisions</p>
             </div>
-                <p>1) This policy applies to all personal data processed by the Rapid Launch.  </p>
-                <p>2) The Responsible Person shall take responsibility for the Raid Launch’s ongoing compliance with this policy.  </p>
-                <p>3) This policy shall be reviewed at least annually.  </p>
-                <p>4) The company shall register with the Information Commissioner’s Office as an organisation that processes personal data.</p>
-        </div>
+            <p>1) This policy applies to all personal data processed by the Rapid Launch.  </p> <!-- used to break the lines up so its not one straight line of text -->
+            <p>2) The Responsible Person shall take responsibility for the Raid Launch’s ongoing compliance with this policy.  </p>
+            <p>3) This policy shall be reviewed at least annually.  </p>
+            <p>4) The company shall register with the Information Commissioner’s Office as an organisation that processes personal data.</p>
+        </div> <!-- ecach column is set up with a div tag so it can be repsonsive to the page -->
              <div class="col-sm-4">
-            <h3>Use of Personal Information</h3>
+            <h3>Use of Personal Information</h3> <!-- header at teh top of each section-->
             <p>Data protection is of the utmost importance to the team of Templates.com.</p>
             <p> Processing your personal data, including name, address, email, and/or phone number will always be in line with the General Data Protection Regulation (GDPR), and in accordance with other data protection regulations applicable to Templates.com</p>
             <p>We have implemented every technical and organizational measure to ensure complete protection of our visitors’ personal data throughout the website.</p>
             <p>Since Internet-based data transmissions may have security gaps, absolute protection is not guaranteed. This is why each data subject can transfer personal data to us via all available means, e.g. by email or phone</p>
             <p> Controller for the purposes of the General Data Protection Regulation (GDPR) is:</p>
         </div>
-        <div class="col-sm-4">
-            <h3> Questions or Suggestions</h3>
-            <p>Lorem ipsum dolor..</p>
-        </div>
+             <div class="col-sm-4">
+                 <h3> Questions or Suggestions</h3><!-- header at teh top of each section-->
+                 <p> Email cjtmorrow@gmail.com  yours truely and fraternally... CM <p> <!-- reffered to as delete -->
+             </div>
     </div>
 </div>
 
