--- a/Rapidlaunch/Views/Countries/Delete.cshtml
+++ b/Rapidlaunch/Views/Countries/Delete.cshtml
@@ -1,27 +1,34 @@
 ﻿@model Rapidlaunch.Models.Country
+<!-- uses the model from country -->
 
 @{
     ViewData["Title"] = "Delete";
 }
+<!-- reffered to as delete -->
 
-<h1>Delete</h1>
+<h1>Delete</h1> <!-- header taking -->
 
 <h3>Are you sure you want to delete this?</h3>
 <div id="testicle">
-    <h4>Country</h4>
+    <!-- tessting -->
+    <h4>Country</h4>  <!-- heading type unanimous across H4 s-->
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <!-- Used in the css and uses the styles -->
+        <dt class="col-sm-2">
+            <!-- getting the data from the db for the country name -->
             @Html.DisplayNameFor(model => model.countryName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.countryName)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
+        <!-- tyoe of form is delete -->
         <input type="hidden" asp-for="CountryID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <!-- -delte button->
+        <a asp-action="Index">Back to List</a> <!-- navigator -->
     </form>
 </div>
