--- a/Rapidlaunch/Views/Home/Index.cshtml
+++ b/Rapidlaunch/Views/Home/Index.cshtml
@@ -4,21 +4,27 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1> Rapid Launch</h1>
+<h1> Rapid Launch</h1> <!-- header -->
 
-<body>
-    <a href="identity/Account/login" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Login</a> <!-- login link-->
-    <a href="identity/Account/Register" class="btn btn-secondary btn-lg active btn-block" role="button" aria-pressed="true">Register</a> <!--regiser Link-->
+<body> <!-- reffed in CSS and centralised -->
+    <a href="identity/Account/login" class="btn btn-primary btn-lg active btn-block" 
+       role="button" aria-pressed="true">Login</a> <!-- login link-->
+    <a href="identity/Account/Register" class="btn btn-secondary btn-lg active btn-block"
+       role="button" aria-pressed="true">Register</a> <!--regiser Link-->
     <p></p>
     <div class="embed-responsive embed-responsive-4by3">
         <!-- youtube video embedding  responsive and embedded link used, video to be used with accelerometer and auto play enabled -->
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u0-pfzKbh2k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u0-pfzKbh2k" 
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+                picture-in-picture" allowfullscreen></iframe>
+        
     </div>
     <p>
 
     </p>
 
     <div>
-        <h1> </h1>
+        <h1> </h1> <!-- used to keep a gap between text and the footer , caused untold issues and 
+                       this seemed the easiest way to fix it -->
     </div>
 </body>
