--- a/Rapidlaunch/Views/ITAccounts/Delete.cshtml
+++ b/Rapidlaunch/Views/ITAccounts/Delete.cshtml
@@ -1,27 +1,29 @@
 ﻿@model Rapidlaunch.Models.ITAccount
-
+<!-- uses the model from ITACOUNT -->
 @{
     ViewData["Title"] = "Delete";
 }
-
+<!-- reffered to as delete -->
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this?</h3> <!-- heading type unanimous across H3 s-->
 <div class="Deletecenter justify-content-md-center">
     <h4>ITAccount</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.itaccountTypeIdentID)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.itaccountTypeIdentID)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="ITAccountID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
+        <!-- -delte button->
+    <a asp-action="Index">Back to List</a> <!-- navigator -->
     </form>
 </div>
